[gd_scene load_steps=12 format=3 uid="uid://f3nx1us1at4a"]

[ext_resource type="SpriteFrames" uid="uid://bqrmwtdaiigiu" path="res://Assets/enemy_animation.tres" id="1_ia10f"]
[ext_resource type="Script" path="res://Scripts/enemy.gd" id="1_luq0e"]
[ext_resource type="Script" path="res://Scripts/hitbox_component.gd" id="3_unfxo"]
[ext_resource type="Script" path="res://Scripts/health_component.gd" id="4_4x4af"]

[sub_resource type="Animation" id="Animation_rhnnt"]
resource_name = "attack"
length = 0.2
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [&"attack_side", 1.0, false],
"method": &"play"
}, {
"args": [&"idle", 1.0, false],
"method": &"play"
}]
}

[sub_resource type="Animation" id="Animation_8hnpq"]
resource_name = "idle"
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&"idle", 1.0, false],
"method": &"play"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r67nr"]
_data = {
"attack": SubResource("Animation_rhnnt"),
"idle": SubResource("Animation_8hnpq")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_54dab"]
radius = 35.0571

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_f1fp8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_oktbg"]
radius = 88.0057

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_3lspy"]

[node name="Enemy" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_luq0e")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_r67nr")
}

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("1_ia10f")
animation = &"idle"
autoplay = "idle"

[node name="AttackRadius" type="Area2D" parent="AnimatedSprite2D"]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2D/AttackRadius"]
shape = SubResource("CircleShape2D_54dab")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="HitboxComponent" type="Area2D" parent="." node_paths=PackedStringArray("health_component")]
collision_layer = 2
script = ExtResource("3_unfxo")
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("CapsuleShape2D_f1fp8")

[node name="HealthComponent" type="Node2D" parent="."]
script = ExtResource("4_4x4af")
MAX_HEALTH = 3.0

[node name="SearchRadius" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="SearchRadius"]
shape = SubResource("CircleShape2D_oktbg")

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_3lspy")

[connection signal="area_entered" from="AnimatedSprite2D/AttackRadius" to="." method="_on_attack_radius_area_entered"]
[connection signal="body_entered" from="SearchRadius" to="." method="_on_search_radius_body_entered"]
[connection signal="body_exited" from="SearchRadius" to="." method="_on_search_radius_body_exited"]
